--- a/src/static/sass/pages/common.sass
+++ b/src/static/sass/pages/common.sass
@@ -1,7 +1,9 @@
 html
     background-color: rgb(225, 226, 225)
 body
-    padding-top: 80px
+    position: absolute
+    top: calc(50% - 233px)
+    left: calc(50% - 243.5px)
 .tabs
     position: relative  
     padding: 0px 
